Comienzo de la estetica de la Web y uso de botones

--- a/PaginaAutos/static/PaginaAutos/css/tooplate-crispy-kitchen.css
+++ b/PaginaAutos/static/PaginaAutos/css/tooplate-crispy-kitchen.css
@@ -320,7 +320,7 @@ strong {
 -----------------------------------------*/
 .hero {
   position: relative;
-  overflow: hidden;
+  overflow: visible;
   padding-top: 20.542rem;
   padding-bottom: 20.542rem;
 }
