--- a/PaginaAutos/templates/PaginaAutos/index.html
+++ b/PaginaAutos/templates/PaginaAutos/index.html
@@ -75,15 +75,15 @@ https://www.tooplate.com/view/2129-crispy-kitchen
 
             </div>
         </nav>
-
-        <main>
-            <section class="hero">
-                
-                <div class="overlay">
-                    <img src="{% static 'PaginaAutos/images/inicio.jpg' %}" class="overlay" width="100%">
-                </div>
-                {% block contenido %}
         
+        <main>
+
+            <div >  
+                <div>
+                    <img src="{% static 'PaginaAutos/images/inicio.jpg' %}" width="100%">
+                </div>
+        {% block contenido %}
+                
                 <div class="container">
                     <div class="row">
 
@@ -94,7 +94,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
             
             <section class="menu section-padding">
                 <div class="container">
