--- a/PaginaAutos/templates/PaginaAutos/contacto.html
+++ b/PaginaAutos/templates/PaginaAutos/contacto.html
@@ -1,6 +1,11 @@
 {% extends 'PaginaAutos/index.html'%}
 
 {% block contenido %}
+{% load static %}
+<section class="menu section-padding">
+    <center>Juan Cruz Gonzalez </center>
+    <center>Email :juancgonzalez0901@gmail.com</center>
+</section>
 
 
 
