--- a/PaginaAutos/templates/PaginaAutos/marcas.html
+++ b/PaginaAutos/templates/PaginaAutos/marcas.html
@@ -1,7 +1,167 @@
+
 {% extends 'PaginaAutos/index.html'%}
 
 {% block contenido %}
+{% load static %}
 
 
+<section class="menu section-padding">
+    <center><h2 style="color:black">Marcas</h2></center>
+<center><h6 style="color:black">En este espacio puede ver todas la marcas de autos que tenemos en esta pagina</h6></center>
+    <div class="container">
+        <div class="row">
 
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="menu-thumb">
+                    <div class="menu-image-wrap">
+                        <a href="ford.html"><img src="{% static 'PaginaAutos/images/ford.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                    </div>
+
+                    <div class="menu-info d-flex flex-wrap align-items-center">
+                        <h4 class="mb-0">Ford</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="menu-thumb">
+                    <div class="menu-image-wrap">
+                        <a href="chevrolet.html"><img src="{% static 'PaginaAutos/images/chevrolet.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                    </div>
+
+                    <div class="menu-info d-flex flex-wrap align-items-center">
+                        <h4 class="mb-0">Chevrolet</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="menu-thumb">
+                    <div class="menu-image-wrap">
+                        <a href="audi.html"><img src="{% static 'PaginaAutos/images/audi.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                    </div>
+
+                    <div class="menu-info d-flex flex-wrap align-items-center">
+                        <h4 class="mb-0">Audi</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="menu-thumb">
+                    <div class="menu-image-wrap">
+                        <a href="ferrari.html"><img src="{% static 'PaginaAutos/images/ferrari.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                    </div>
+
+                    <div class="menu-info d-flex flex-wrap align-items-center">
+                        <h4 class="mb-0">Ferrari</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="menu-thumb">
+                    <div class="menu-image-wrap">
+                        <a href="lamborgini.html"><img src="{% static 'PaginaAutos/images/lambo.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                    </div>
+
+                    <div class="menu-info d-flex flex-wrap align-items-center">
+                        <h4 class="mb-0">Lamborgini</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="menu-thumb">
+                    <div class="menu-image-wrap">
+                        <a href="volkswagen.html"><img src="{% static 'PaginaAutos/images/volkswagen.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                    </div>
+
+                    <div class="menu-info d-flex flex-wrap align-items-center">
+                        <h4 class="mb-0">Volkswagen</h4>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="menu-thumb">
+                    <div class="menu-image-wrap">
+                        <a href="ford.html"><img src="{% static 'PaginaAutos/images/renault.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                    </div>
+
+                    <div class="menu-info d-flex flex-wrap align-items-center">
+                        <h4 class="mb-0">Renault</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="menu-thumb">
+                    <div class="menu-image-wrap">
+                        <a href="chevrolet.html"><img src="{% static 'PaginaAutos/images/honda.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                    </div>
+
+                    <div class="menu-info d-flex flex-wrap align-items-center">
+                        <h4 class="mb-0">Honda</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="menu-thumb">
+                    <div class="menu-image-wrap">
+                        <a href="audi.html"><img src="{% static 'PaginaAutos/images/toyota.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                    </div>
+
+                    <div class="menu-info d-flex flex-wrap align-items-center">
+                        <h4 class="mb-0">Toyota</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="menu-thumb">
+                    <div class="menu-image-wrap">
+                        <a href="ferrari.html"><img src="{% static 'PaginaAutos/images/peugeot.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                    </div>
+
+                    <div class="menu-info d-flex flex-wrap align-items-center">
+                        <h4 class="mb-0">Peugeot</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="menu-thumb">
+                    <div class="menu-image-wrap">
+                        <a href="lamborgini.html"><img src="{% static 'PaginaAutos/images/fiat.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                    </div>
+
+                    <div class="menu-info d-flex flex-wrap align-items-center">
+                        <h4 class="mb-0">Fiat</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-12">
+                <div class="menu-thumb">
+                    <div class="menu-image-wrap">
+                        <a href="volkswagen.html"><img src="{% static 'PaginaAutos/images/bmw.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                    </div>
+
+                    <div class="menu-info d-flex flex-wrap align-items-center">
+                        <h4 class="mb-0">BMW</h4>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
 {% endblock %}
