ajustes minimos en template

--- a/PaginaAutos/templates/PaginaAutos/autos.html
+++ b/PaginaAutos/templates/PaginaAutos/autos.html
@@ -8,7 +8,7 @@
         Crear Auto
     </a>
     <a href="{% url 'autos-list' %}" class="custom-btn" style="color:black">
-        Buscar Auto
+        Listar Auto
     </a>
 </section>
 
