--- a/PaginaAutos/templates/PaginaAutos/autos_list.html
+++ b/PaginaAutos/templates/PaginaAutos/autos_list.html
@@ -1,6 +1,7 @@
 {% extends 'PaginaAutos/index.html'%}
 
 {% block contenido %}
+<section class="menu section-padding">
 
 <h1>Lista de Autos</h1>
 
@@ -14,4 +15,6 @@
         </li>
     {% endfor %}
 </ul>
+
+</section>
 {% endblock %}
