--- a/PaginaAutos/templates/PaginaAutos/contacto.html
+++ b/PaginaAutos/templates/PaginaAutos/contacto.html
@@ -4,7 +4,15 @@
 {% load static %}
 <section class="menu section-padding">
     <center>Juan Cruz Gonzalez </center>
-    <center>Email :juancgonzalez0901@gmail.com</center>
+    <center>juancgonzalez0901@gmail.com</center>
+    <p>
+    <center>Felipe Da Rosa </center>
+    <center>felidrf@gmail.com</center>
+    </p>
+    <p>
+    <center>Victor Mariano Cuba Larrain </center>
+    <center>email@gmail.com</center>
+    </p>
 </section>
 
 
