--- a/PaginaAutos/templates/PaginaAutos/auto_detalle.html
+++ b/PaginaAutos/templates/PaginaAutos/auto_detalle.html
@@ -1,7 +1,9 @@
 {% extends 'PaginaAutos/index.html'%}
 
 {% block contenido %}
+<section class="menu section-padding">
 
-<p>Auto: {{auto}}</p>
+    <p>Auto: {{auto}}</p>
 
+</section>
 {% endblock %}
