--- a/PaginaAutos/templates/PaginaAutos/marcas.html
+++ b/PaginaAutos/templates/PaginaAutos/marcas.html
@@ -7,14 +7,14 @@
 
 <section class="menu section-padding">
     <center><h2 style="color:black">Marcas</h2></center>
-<center><h6 style="color:black">En este espacio puede ver todas la marcas de autos que tenemos en esta pagina</h6></center>
+    <center><h6 style="color:black">En este espacio puede ver todas la marcas de autos que tenemos en esta pagina</h6></center>
     <div class="container">
         <div class="row">
 
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="menu-thumb">
                     <div class="menu-image-wrap">
-                        <a href="ford.html"><img src="{% static 'PaginaAutos/images/ford.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                        <img><img src="{% static 'PaginaAutos/images/ford.jpg' %}" class="img-fluid menu-image" alt=""></img>
                     </div>
 
                     <div class="menu-info d-flex flex-wrap align-items-center">
@@ -26,7 +26,7 @@
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="menu-thumb">
                     <div class="menu-image-wrap">
-                        <a href="chevrolet.html"><img src="{% static 'PaginaAutos/images/chevrolet.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                        <img><img src="{% static 'PaginaAutos/images/chevrolet.jpg' %}" class="img-fluid menu-image" alt=""></img>
                     </div>
 
                     <div class="menu-info d-flex flex-wrap align-items-center">
@@ -38,7 +38,7 @@
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="menu-thumb">
                     <div class="menu-image-wrap">
-                        <a href="audi.html"><img src="{% static 'PaginaAutos/images/audi.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                        <img><img src="{% static 'PaginaAutos/images/audis.jpg' %}" class="img-fluid menu-image" alt=""></img>
                     </div>
 
                     <div class="menu-info d-flex flex-wrap align-items-center">
@@ -50,7 +50,7 @@
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="menu-thumb">
                     <div class="menu-image-wrap">
-                        <a href="ferrari.html"><img src="{% static 'PaginaAutos/images/ferrari.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                        <img><img src="{% static 'PaginaAutos/images/ferrari.jpg' %}" class="img-fluid menu-image" alt=""></img>
                     </div>
 
                     <div class="menu-info d-flex flex-wrap align-items-center">
@@ -62,7 +62,7 @@
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="menu-thumb">
                     <div class="menu-image-wrap">
-                        <a href="lamborgini.html"><img src="{% static 'PaginaAutos/images/lambo.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                        <img><img src="{% static 'PaginaAutos/images/lamborgini.jpg' %}" class="img-fluid menu-image" alt=""></img>
                     </div>
 
                     <div class="menu-info d-flex flex-wrap align-items-center">
@@ -74,7 +74,7 @@
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="menu-thumb">
                     <div class="menu-image-wrap">
-                        <a href="volkswagen.html"><img src="{% static 'PaginaAutos/images/volkswagen.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                        <img><img src="{% static 'PaginaAutos/images/volkswagen.jpg' %}" class="img-fluid menu-image" alt=""></img>
                     </div>
 
                     <div class="menu-info d-flex flex-wrap align-items-center">
@@ -92,7 +92,7 @@
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="menu-thumb">
                     <div class="menu-image-wrap">
-                        <a href="ford.html"><img src="{% static 'PaginaAutos/images/renault.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                        <img><img src="{% static 'PaginaAutos/images/renault.jpg' %}" class="img-fluid menu-image" alt=""></img>
                     </div>
 
                     <div class="menu-info d-flex flex-wrap align-items-center">
@@ -104,7 +104,7 @@
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="menu-thumb">
                     <div class="menu-image-wrap">
-                        <a href="chevrolet.html"><img src="{% static 'PaginaAutos/images/honda.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                        <img><img src="{% static 'PaginaAutos/images/honda.jpg' %}" class="img-fluid menu-image" alt=""></img>
                     </div>
 
                     <div class="menu-info d-flex flex-wrap align-items-center">
@@ -116,7 +116,7 @@
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="menu-thumb">
                     <div class="menu-image-wrap">
-                        <a href="audi.html"><img src="{% static 'PaginaAutos/images/toyota.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                        <img href="audi.html"><img src="{% static 'PaginaAutos/images/toyota.jpg' %}" class="img-fluid menu-image" alt=""></img>
                     </div>
 
                     <div class="menu-info d-flex flex-wrap align-items-center">
@@ -128,7 +128,7 @@
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="menu-thumb">
                     <div class="menu-image-wrap">
-                        <a href="ferrari.html"><img src="{% static 'PaginaAutos/images/peugeot.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                        <img href="ferrari.html"><img src="{% static 'PaginaAutos/images/peugeot.jpg' %}" class="img-fluid menu-image" alt=""></img>
                     </div>
 
                     <div class="menu-info d-flex flex-wrap align-items-center">
@@ -140,7 +140,7 @@
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="menu-thumb">
                     <div class="menu-image-wrap">
-                        <a href="lamborgini.html"><img src="{% static 'PaginaAutos/images/fiat.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                        <img href="lamborgini.html"><img src="{% static 'PaginaAutos/images/fiat.jpg' %}" class="img-fluid menu-image" alt=""></img>
                     </div>
 
                     <div class="menu-info d-flex flex-wrap align-items-center">
@@ -152,7 +152,7 @@
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="menu-thumb">
                     <div class="menu-image-wrap">
-                        <a href="volkswagen.html"><img src="{% static 'PaginaAutos/images/bmw.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                        <img><img src="{% static 'PaginaAutos/images/bmw.jpg' %}" class="img-fluid menu-image" alt=""></img>
                     </div>
 
                     <div class="menu-info d-flex flex-wrap align-items-center">
