--- a/PaginaAutos/templates/PaginaAutos/nosotros.html
+++ b/PaginaAutos/templates/PaginaAutos/nosotros.html
@@ -3,7 +3,7 @@
 {% block contenido %}
 {% load static %}
 <section class="menu section-padding">
-    <center><h3>Sobre Nostros</h3></center> 
+    <center><h2 class="text-balck mb-lg-5 mb-3">Sobre Nostros</h2></center> 
     <center>Hola nosotros somos un grupo de programadores los cuales buscan poder facilitar la busqueda de autos para entuciastas del medio. <br> Nuestro objetivo es que cada persona que tenga una duda sobre cualquier auto pueda consultarla en este sitio <br> Incluso tenemos un chat global para que cada usuario comparta datos los cuales quiza no esten en la pagina</center>
 </section>
 
