--- a/PaginaAutos/templates/PaginaAutos/autos_list.html
+++ b/PaginaAutos/templates/PaginaAutos/autos_list.html
@@ -1,17 +1,18 @@
 {% extends 'PaginaAutos/index.html'%}
 
 {% block contenido %}
+<section class="menu section-padding">
+    <h1>Lista de Autos</h1>
 
-<h1>Lista de Autos</h1>
-
-<ul>
-    {% for auto in object_list %}
-        <li>
-            {{auto.nombre}}
-            <a href="{% url 'autos-detalle' auto.id%}">Detalle</a>
-            <a href="{% url 'autos-borrar' auto.id%}">Borrar</a>
-            <a href="{% url 'autos-update' auto.id%}">Actualizar</a>
-        </li>
-    {% endfor %}
-</ul>
+    <ul>
+        {% for auto in object_list %}
+            <li>
+                {{auto.nombre}}
+                <a href="{% url 'autos-detalle' auto.id%}">Detalle</a>
+                <a href="{% url 'autos-borrar' auto.id%}">Borrar</a>
+                <a href="{% url 'autos-update' auto.id%}">Actualizar</a>
+            </li>
+        {% endfor %}
+    </ul>
+</section>
 {% endblock %}
