--- a/PaginaAutos/templates/PaginaAutos/contacto.html
+++ b/PaginaAutos/templates/PaginaAutos/contacto.html
@@ -1,8 +1,10 @@
 {% extends 'PaginaAutos/index.html'%}
 
 {% block contenido %}
+
 {% load static %}
 <section class="menu section-padding">
+    <center><h2 class="text-black mb-lg-5 mb-3">Contacto</h2></center>
     <center>Juan Cruz Gonzalez </center>
     <center>Email :juancgonzalez0901@gmail.com</center>
 </section>
