--- a/PaginaAutos/templates/PaginaAutos/index.html
+++ b/PaginaAutos/templates/PaginaAutos/index.html
@@ -21,7 +21,12 @@
         <link href="{% static 'PaginaAutos/css/bootstrap-icons.css' %}" rel="stylesheet">
 
         <link href="{% static 'PaginaAutos/css/tooplate-crispy-kitchen.css' %}" rel="stylesheet">
-        
+        <style>
+            body {
+            background-color: #ddd;
+            padding: 80px 16px 16px 16px;
+            }
+        </style>
     </head>
     
     <body>
@@ -77,7 +82,7 @@
                     <div class="col-lg-5 col-12 m-auto">
                         <div class="heroText">
 
-                            <h1 class="text-white mb-lg-5 mb-3">Libreria de Autos</h1>
+                            <center><h1 class="text-white mb-lg-5 mb-3">Cars Library</h1></center>
                         </div>
                     </div>
                     <div class="video-wrap">
@@ -103,7 +108,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="menu-thumb">
                                 <div class="menu-image-wrap">
-                                    <a href="ford.html"><img src="{% static 'PaginaAutos/images/ford.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                                    <img><img src="{% static 'PaginaAutos/images/ford.jpg' %}" class="img-fluid menu-image" alt=""></img>
                                 </div>
 
                                 <div class="menu-info d-flex flex-wrap align-items-center">
@@ -115,7 +120,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="menu-thumb">
                                 <div class="menu-image-wrap">
-                                    <a href="chevrolet.html"><img src="{% static 'PaginaAutos/images/chevrolet.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                                    <img><img src="{% static 'PaginaAutos/images/chevrolet.jpg' %}" class="img-fluid menu-image" alt=""></img>
                                 </div>
 
                                 <div class="menu-info d-flex flex-wrap align-items-center">
@@ -127,7 +132,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="menu-thumb">
                                 <div class="menu-image-wrap">
-                                    <a href="audi.html"><img src="{% static 'PaginaAutos/images/audi.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                                    <img><img src="{% static 'PaginaAutos/images/audis.jpg' %}" class="img-fluid menu-image" alt=""></img>
                                 </div>
 
                                 <div class="menu-info d-flex flex-wrap align-items-center">
@@ -139,7 +144,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="menu-thumb">
                                 <div class="menu-image-wrap">
-                                    <a href="ferrari.html"><img src="{% static 'PaginaAutos/images/ferrari.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                                    <img><img src="{% static 'PaginaAutos/images/ferrari.jpg' %}" class="img-fluid menu-image" alt=""></img>
                                 </div>
 
                                 <div class="menu-info d-flex flex-wrap align-items-center">
@@ -151,7 +156,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="menu-thumb">
                                 <div class="menu-image-wrap">
-                                    <a href="lamborgini.html"><img src="{% static 'PaginaAutos/images/lambo.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                                    <img><img src="{% static 'PaginaAutos/images/lamborgini.jpg' %}" class="img-fluid menu-image" alt=""></img>
                                 </div>
 
                                 <div class="menu-info d-flex flex-wrap align-items-center">
@@ -163,7 +168,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="menu-thumb">
                                 <div class="menu-image-wrap">
-                                    <a href="volkswagen.html"><img src="{% static 'PaginaAutos/images/volkswagen.jpg' %}" class="img-fluid menu-image" alt=""></a>
+                                    <img><img src="{% static 'PaginaAutos/images/volkswagen.jpg' %}" class="img-fluid menu-image" alt=""></img>
                                 </div>
 
                                 <div class="menu-info d-flex flex-wrap align-items-center">
