--- a/PaginaAutos/templates/PaginaAutos/index.html
+++ b/PaginaAutos/templates/PaginaAutos/index.html
@@ -26,6 +26,14 @@
             background-color: #ddd;
             padding: 80px 16px 16px 16px;
             }
+            .custom-video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            }
         </style>
     </head>
     
@@ -76,10 +84,10 @@
         
     <main>
         <section >
-            <div class="container">
+            <div>
                 <div class="row">
 
-                    <div class="col-lg-5 col-12 m-auto">
+                    <div>
                         <div class="heroText">
 
                             <center><h1 class="text-white mb-lg-5 mb-3">Cars Library</h1></center>
